Added EST timezone time stamp and improved modularity of deploy script

--- a/content/01-etl/02-tidy-data.qmd
+++ b/content/01-etl/02-tidy-data.qmd
@@ -1,6 +1,6 @@
 ---
 title: "ETL Step 2 - Tidy data"
-date: "`r Sys.time()`"
+date: "`r lubridate::now(tzone = 'EST')` EST"
 output: html_document
 ---
 
