--- a/content/01-etl/01-raw-data-refresh.qmd
+++ b/content/01-etl/01-raw-data-refresh.qmd
@@ -1,6 +1,6 @@
 ---
 title: "ETL Step 1 - Raw Data Refresh"
-date: "`r Sys.time()`"
+date: "`r lubridate::now(tzone = 'EST')` EST"
 output: html_document
 ---
 
