--- a/_write_manifest.qmd
+++ b/_write_manifest.qmd
@@ -68,3 +68,12 @@ writeManifest(
 print("Complete 🎉")
 ```
 
+### 3.2 Connect Widgets Dashboard
+
+```{r}
+writeManifest(
+  appDir = "content/03-app/02-connect-widgets-app", 
+  appFiles = "document.qmd"
+)
+print("Complete 🎉")
+```
